<resources>
  <string name="app_name">Beedroid</string>

  <string name="menu_plant">Vegetation</string>
  <string name="menu_plants_names">Plants</string>
  <string name="menu_submit">Submit</string>

  <string name="login_title">Log in to Food4Bees</string>
  <string name="plants_names_title">Choose Vegetation Type</string>
  <string name="plants_title">Choose Vegetation Amount</string>

  <string name="login">Log In</string>
  <string name="email">Email</string>
  <string name="password">Password</string>

  <string name="plant_name">Plant name</string>
  <string name="coverage">Coverage</string>
  <string name="caption">Plant image</string>

<!--
  <string name="webapp_url">http://food4bees.org/f4bi/</string>
-->
  <string name="webapp_url">http://192.168.42.2:8080/f4bi/</string>

  <string name="submit_success">Successfully submitted a record.</string>
  <string name="submit_error">Cannot connect to the server when submitting a record. Please check your Internet connection and try again later.</string>
</resources>
