<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="8dp"
              android:weightSum="7">
                

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
    <TextView android:id="@+id/plant_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/plant_name"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/black" />

    <TextView android:id="@+id/scientific_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/black" />
  </LinearLayout>

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/coverage"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/black" />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="5">
      <TextView android:id="@+id/percentage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0%"
                android:textColor="@color/dark_grey" />
      <SeekBar android:id="@+id/percentage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="4" />
    </LinearLayout>
  </LinearLayout>

  <TextView android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
    <TextView android:id="@+id/photo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/dark_grey" />
    <TextView android:id="@+id/caption"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/caption"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/black" />
  </LinearLayout>

</LinearLayout>
