<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:background="@color/white">
  <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <!-- Food4bees logo --> 
    <ImageView android:scaleType="centerInside"
               android:src="@drawable/logo_f4b"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="50dip"
               android:layout_marginBottom="20dip"
               android:gravity="center" />
    <!-- Error message -->
    <TextView android:id="@+id/error"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:layout_marginTop="10dip"
              android:layout_marginBottom="10dip"
              android:gravity="left"
              android:textSize="20dip"
              android:textColor="#ff0000" />
    <!--  Email -->
    <EditText android:id="@+id/email"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:layout_marginTop="5dip"
              android:layout_marginBottom="10dip"
              android:singleLine="true"
              android:hint="@string/email" 
              android:textColor="@color/black"/>
    <!--  Password -->
    <EditText android:id="@+id/password"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:layout_marginTop="5dip"
              android:layout_marginBottom="10dip"
              android:singleLine="true"
              android:hint="@string/password"
              android:password="true"
              android:textColor="@color/black" />
    <!-- Login button -->
    <Button android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip"
            android:text="@string/login"
            android:onClick="logIn" />
    <!-- Link to registration screen -->
<!--
    <TextView android:id="@+id/link_to_register"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="40dip"
              android:layout_marginBottom="40dip"
              android:text="New to Food4Bees? Register here"
              android:gravity="center"
              android:textSize="20dip"
              android:textColor="#0b84aa" />
-->
  </LinearLayout>
</ScrollView>
